--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,16 @@
 .gradle/
 build/
 
-# Gradle Wrapper files
-!gradle/wrapper/gradle-wrapper.jar
-gradle/wrapper/gradle-wrapper.properties
+# Maven-specific files
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
 # IntelliJ IDEA project files
 .idea/
@@ -31,12 +38,13 @@ Thumbs.db
 *.class
 
 # Dependency caches
+bin
 **/out/
 **/.idea_modules/
 **/.classpath
 **/.project
 **/.settings/
-checkouts/
 
 # OS-specific files
 *.~lock.*
+*.afdesign~lock~
