--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@
 # Ensure we use remote dependencies, not local checkouts
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.jvmargs=-Xmx4g
+kotlin.daemon.jvmargs=-Xmx8g -XX:+UseParallelGC
 
 # Disable any potential composite build features
 org.gradle.composite.builds=false
